addons/tekton/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-clusterissuer
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: kube-system/basic-auth
spec:
  tls:
    - hosts:
        - tekton.tibor.host
      secretName: tekton-tls
  rules:
    - host: tekton.tibor.host
      http:
        paths:
          - path: /
            backend:
              serviceName: tekton-dashboard
              servicePort: 9097
